package ru.alexanna.cloud.io.server;

public class AuthenticationService {
    public boolean findUser(String login, String password) {
        return false;
    }
}
